k8s/web/web-deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: webmvc
#   namespace: projet-apps
# spec:
#   selector:
#     matchLabels:
#       app: webmvc
#   template:
#     metadata:
#       labels:
#         app: webmvc
#     spec:
#       affinity:
#         podAffinity:
#           preferredDuringSchedulingIgnoredDuringExecution:
#           - weight: 100
#             podAffinityTerm:
#               labelSelector:
#                 matchExpressions:
#                 - key: app
#                   operator: In
#                   values:
#                   - jobs-api
#                   - applicants-api
#               topologyKey: "kubernetes.io/hostname"
#       containers:
#       - name: webmvc
#         image: warshall/webmvc:v1.0.0
#         env:
#         - name: ApiSettings__IdentityApiUrl
#           value: "http://identity-api.projet-apps.svc.cluster.local"
#         - name: ApiSettings__JobsApiUrl
#           value: "http://jobs-api.projet-apps.svc.cluster.local"
#         - name: ApiSettings__ApplicantsApiUrl
#           value: "http://applicants-api.projet-apps.svc.cluster.local"
#         - name: ASPNETCORE_ENVIRONMENT
#           value: "Development"
#         ports:
#         - containerPort: 80
      
#         resources:
#           requests:
#             cpu: "100m"
#             memory: "900Mi"
#           limits:
#             cpu: "1"
#             memory: "2000Mi"
#         livenessProbe:
#           httpGet:
#             path: /
#             port: 80
#           initialDelaySeconds: 60
#           periodSeconds: 10
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: webmvc
#   namespace: projet-apps
# spec:
#   ports:
#   - port: 80
#     targetPort: 80
#   selector:
#     app: webmvc
# ---
# apiVersion: autoscaling/v2
# kind: HorizontalPodAutoscaler
# metadata:
#   name: webmvc-hpa
#   namespace: projet-apps
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: webmvc
#   minReplicas: 1
#   maxReplicas: 5
#   metrics:
#   - type: Resource
#     resource:
#       name: cpu
#       target:
#         type: Utilization
#         averageUtilization: 60 # Seuil réglé à 60% pour déclencher le test facilement
# ---
# # --- NOUVELLE PARTIE : INGRESS POUR LE HTTPS ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: webmvc-ingress
#   namespace: projet-apps
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/ssl-redirect: "true" # Force le HTTPS
# spec:
#   ingressClassName: nginx
#   tls:
#   - hosts:
#     - localhost #webmvc.local        # Le nom de domaine que tu utiliseras
#     secretName: webmvc-tls # Le nom du secret qu'on va créer
#   rules:
#   - host: localhost #webmvc.local
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: webmvc # Doit correspondre au nom du Service ci-dessus
#             port:
#               number: 80

# ---------------------------------------

apiVersion: apps/v1
kind: Deployment
metadata:
  name: webmvc
  namespace: projet-apps
spec:
  selector:
    matchLabels:
      app: webmvc
  template:
    metadata:
      labels:
        app: webmvc
    spec:
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - jobs-api
                  - applicants-api
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: webmvc
        image: warshall/webmvc:v1.0.0
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "900Mi"
          limits:
            cpu: "1"
            memory: "2000Mi"
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 90
          periodSeconds: 15
          failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: webmvc
  namespace: projet-apps
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: webmvc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webmvc-ingress
  namespace: projet-apps
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - localhost
    secretName: webmvc-tls
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webmvc
            port:
              number: 80
